# ChangeLog for dev-python/PyQt4
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*PyQt4-4.6.1_pre20091014 (15 Oct 2009)

  15 Oct 2009; Markos Chandras <hwoarang@gentoo.org>
  -PyQt4-4.6.1_pre20091013.ebuild, +PyQt4-4.6.1_pre20091014.ebuild:
  Version bump, remove old

*PyQt4-4.6.1_pre20091013 (14 Oct 2009)

  14 Oct 2009; Markos Chandras <hwoarang@gentoo.org>
  -PyQt4-4.6.1_pre20091010.ebuild, +PyQt4-4.6.1_pre20091013.ebuild:
  Version bump, remove old

*PyQt4-4.6.1_pre20091010 (12 Oct 2009)

  12 Oct 2009; Markos Chandras <hwoarang@gentoo.org>
  -PyQt4-4.6.1_pre20091009.ebuild, +PyQt4-4.6.1_pre20091010.ebuild:
  New snapshot. Remove old

*PyQt4-4.6.1_pre20091009 (10 Oct 2009)

  10 Oct 2009; Markos Chandras <hwoarang@gentoo.org>
  -PyQt4-4.6.1_pre20091007.ebuild, +PyQt4-4.6.1_pre20091009.ebuild:
  New snapshot

*PyQt4-4.6.1_pre20091007 (08 Oct 2009)

  08 Oct 2009; Markos Chandras <hwoarang@gentoo.org>
  -PyQt4-4.6.1_pre20091002.ebuild, +PyQt4-4.6.1_pre20091007.ebuild:
  New snapshot. Remove old

*PyQt4-4.6.1_pre20091002 (03 Oct 2009)

  03 Oct 2009; Markos Chandras <hwoarang@gentoo.org>
  -PyQt4-4.6.1_pre20091001.ebuild, +PyQt4-4.6.1_pre20091002.ebuild:
  Version bump, remove old

*PyQt4-4.6.1_pre20091001 (02 Oct 2009)

  02 Oct 2009; Markos Chandras <hwoarang@gentoo.org>
  +PyQt4-4.6.1_pre20091001.ebuild:
  New snapshot

*PyQt4-4.6 (01 Oct 2009)

  01 Oct 2009; Davide Pesavento <davidepesa@gmail.com>
  -PyQt4-4.6_pre20090811.ebuild, +PyQt4-4.6.ebuild,
  files/configure.py.patch, metadata.xml:
  Version bump.

  15 Aug 2009; Davide Pesavento <davidepesa@gmail.com>
  PyQt4-4.6_pre20090811.ebuild:
  Enable QtScriptTools bindings (bug #279945).

  15 Aug 2009; Markos Chandras <hwoarang@gentoo.org>
  -PyQt4-4.6_pre20090810.ebuild:
  Remove old snapshot

*PyQt4-4.6_pre20090811 (12 Aug 2009)

  12 Aug 2009; Markos Chandras <hwoarang@gentoo.org>
  +PyQt4-4.6_pre20090811.ebuild:
  New snapshot

*PyQt4-4.6_pre20090810 (11 Aug 2009)
