@@ -1,7 +1,9 @@
 AUX configure.py.patch 1573 RMD160 d1b5854a0e692b66c0bfb6852c1b2ae6dda21237 SHA1 73da000795633017460f209041f9c2b4cb377354 SHA256 df966b52121cafbbbede385f2eb2682531cc596a505a4fdba00011c43a5abb84
 DIST PyQt-x11-gpl-4.6.1-snapshot-20091014.tar.gz 6850057 RMD160 44cfc2a68f1460607b40f65e0b647d36ce03f4ae SHA1 76adf662f97a7b7522d220d1db74f569ce86b791 SHA256 ff3883f1aade0ed75ca5efcc7ba431610c20009688b874a4175f90799504097a
+DIST PyQt-x11-gpl-4.6.1-snapshot-20091020.tar.gz 6850093 RMD160 249e61926342e338a0a01adaaeeef5d0a745e089 SHA1 7131cc3d7bd7ae2f983693a8ab3dee8b38e9a3f3 SHA256 03727c174318191d67b1c9b00af363527478e900e96bc195a3114836b273b4f5
 DIST PyQt-x11-gpl-4.6.tar.gz 6975406 RMD160 96a879fc22147ad752106cc4c33101c7bf54ddf2 SHA1 0bee923e68b5134b9bcc13078ffc3da744a150e5 SHA256 29dce3dd95860466d726a943969f1ff4c96796f6c611adb3e7e4ebeb9b72c72a
 EBUILD PyQt4-4.6.1_pre20091014.ebuild 3868 RMD160 305d691a7b7996a85b4d8e2dbd7979d6bf6168c9 SHA1 9ecbc0e485b80729100c77469468d09631f244c9 SHA256 f731f6710ace2b08d0feefc618634faade3b5749fa08d1824bd8a73bd369ae84
+EBUILD PyQt4-4.6.1_pre20091020.ebuild 3868 RMD160 305d691a7b7996a85b4d8e2dbd7979d6bf6168c9 SHA1 9ecbc0e485b80729100c77469468d09631f244c9 SHA256 f731f6710ace2b08d0feefc618634faade3b5749fa08d1824bd8a73bd369ae84
 EBUILD PyQt4-4.6.ebuild 3872 RMD160 e2ed973f56b279de898e23e84ec13089bfdad680 SHA1 292692e41f6c7d0be7728ff84a4b977077427ce2 SHA256 8612351c5db19b91fff6c1810c54e8e16178d0e734d78950a28f713bcf986b7f
-MISC ChangeLog 11343 RMD160 1191bab3b2988faeb3f69e1ebdb9d222054b0a4a SHA1 fbe5cac3e79aba7a6cc4e4ebcf1aec304d4515bf SHA256 31cb4d7b4948782e1d40e366fc74c4651d433bc8c9449db4dbf5dd8482428b7b
+MISC ChangeLog 11487 RMD160 10d3e60d2b33ea1c23fb7cff0ec9bbeff19542c9 SHA1 58bd199707e26729cea9714694beb9e3608a7384 SHA256 6d2ee15188ce51b8018ae2bc10636666195e3649de4764c64dba4fa6b3641f40
 MISC metadata.xml 784 RMD160 f98352d1efdc46ce85fa86a251e0334953953171 SHA1 8dcecbf0e4091ab3b8387523ec06a602a01821a3 SHA256 dd8004eeba543eba4dbc1f4ab6a3693c12d1185e9b33d028efd495f80ba18476
