@@ -1,6 +1,8 @@
 DIST sip-4.9.1-snapshot-20091015.tar.gz 649856 RMD160 7ba570c9b82650724414ce914bf1854ad7698d22 SHA1 93ffade7b4964d613b0533c3b3009130c8ff93a2 SHA256 6311e8f478b8c9eead832d698ae4e0e668e19d87887c0bd9ee853fb2240b45be
+DIST sip-4.9.1-snapshot-20091020.tar.gz 649921 RMD160 fe5ac2396001e0f9d0c70e039d4e0cde9ddbddfb SHA1 932b24217e11165abac6ff1aea5b49c7b528cbef SHA256 06c490b60b7e01f5d9b342db807f64af0fb243a03eb9d75271c9016374d25a58
 DIST sip-4.9.tar.gz 659618 RMD160 71b181093d9410a282de73f3c8235e2f330442e7 SHA1 5c9e0aa55d664e2a35295b031df950d0a4fe9529 SHA256 9bdeef5528b88b1c06ee16f0f5391d7d79e0353e53ca73999e7e5d32e41ede02
 EBUILD sip-4.9.1_pre20091015.ebuild 1475 RMD160 9b922efaadab2f180cbb1cf94cdbf27141671f8f SHA1 a15156ad2388722930384fa820253cf8ee110faa SHA256 45171b1e34f95605195e49246afac658783d66b15fb5227c297d28150a04d3cb
+EBUILD sip-4.9.1_pre20091020.ebuild 1475 RMD160 9b922efaadab2f180cbb1cf94cdbf27141671f8f SHA1 a15156ad2388722930384fa820253cf8ee110faa SHA256 45171b1e34f95605195e49246afac658783d66b15fb5227c297d28150a04d3cb
 EBUILD sip-4.9.ebuild 1487 RMD160 012911f2611a3c994317e4d813872913345d62bf SHA1 686c3b880afcaf71076d6ea35fd68fdefd14a099 SHA256 6ea0ce50ba053bf75d0d99959d77a319c71b52f00bbf68d4096019578480a950
-MISC ChangeLog 4601 RMD160 2e2622fc58de941e908b0901fcb68802c2d0c76c SHA1 0c97136f327e4d7472319311963ecd47a73316b6 SHA256 15a248c9daeffa846dfccd702c17c6caacab58ccbb4d31702ca375bba4d064a6
+MISC ChangeLog 4741 RMD160 000eb95942d8b9a003122b1951d2e39b960c65ae SHA1 534ecdc857e3de6a58a785d8057e5cbd185e7e2b SHA256 4a2e0d9b0de9084aac7e8ae5720fed0fcdc47216bf8ad724dd0c64933ad5874a
 MISC metadata.xml 175 RMD160 74ecde8b999da503a2733b49ed618d5d50d26476 SHA1 ec86e15b85c2bc4429ad67bb52238b44f2b16cbd SHA256 26b18db06b1665422af8905fb70f8f48920a048578172d62b9689e273ee39a2d
