@@ -2,6 +2,12 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*sip-4.9.1_pre20091020 (21 Oct 2009)
+
+  21 Oct 2009; Markos Chandras <hwoarang@gentoo.org>
+  +sip-4.9.1_pre20091020.ebuild:
+  New snapshot
+
 *sip-4.9.1_pre20091015 (16 Oct 2009)
 
   16 Oct 2009; Markos Chandras <hwoarang@gentoo.org>
