@@ -2,6 +2,12 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*PyQt4-4.6.1_pre20091020 (21 Oct 2009)
+
+  21 Oct 2009; Markos Chandras <hwoarang@gentoo.org>
+  +PyQt4-4.6.1_pre20091020.ebuild:
+  New snapshot
+
 *PyQt4-4.6.1_pre20091014 (15 Oct 2009)
 
   15 Oct 2009; Markos Chandras <hwoarang@gentoo.org>
